--- a/HealthTrackerApp/src/main/resources/view_activities_list.fxml
+++ b/HealthTrackerApp/src/main/resources/view_activities_list.fxml
@@ -20,7 +20,8 @@
                <items>
                   <Button fx:id="diet" mnemonicParsing="false" onAction="#navigatePage" text="Diet &amp; Exercise" />
                   <Button fx:id="goals" mnemonicParsing="false" onAction="#navigatePage" text="Goals" />
-                  <Button fx:id="groups" mnemonicParsing="false" onAction="#navigatePage" text="Groups" />
+                  <Button fx:id="groups" mnemonicParsing="false" onAction="#goToGroupPage" text="Groups" />
+                  <Button fx:id="Dashboard" layoutX="160.0" layoutY="10.0" mnemonicParsing="false" onAction="#navigatePage" text="Groups" />
                </items>
             </ToolBar>
             <ToolBar prefHeight="40.0" prefWidth="352.0">
