--- a/HealthTrackerApp/src/main/resources/view_activities_list.fxml
+++ b/HealthTrackerApp/src/main/resources/view_activities_list.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewActivitiesListController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewActivitiesListController">
    <children>
       <GridPane>
         <columnConstraints>
@@ -48,7 +48,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </AnchorPane>
-      <AnchorPane prefHeight="300.0">
+      <AnchorPane prefHeight="200.0" VBox.vgrow="ALWAYS">
          <children>
             <ListView fx:id="exercisesList" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
@@ -63,5 +63,10 @@
                <Insets bottom="5.0" top="5.0" />
            </padding>
        </HBox>
+      <Button mnemonicParsing="false" onAction="#switchToGraphActivity" text="View Activities In Graph" textAlignment="CENTER">
+         <VBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </VBox.margin>
+      </Button>
    </children>
 </VBox>
