--- a/HealthTrackerApp/src/main/resources/food_list_cell.fxml
+++ b/HealthTrackerApp/src/main/resources/food_list_cell.fxml
@@ -11,10 +11,10 @@
         <children>
             <ImageView>
                 <image>
-                    <Image url="@icons/baseline_directions_run_black_24dp.png" />
+                    <Image url="@icons/baseline_menu_book_black_24dp.png" />
                 </image>
             </ImageView>
-            <Text fx:id="typeText" text="Exercise Type" />
+            <Text fx:id="typeText" text="Food Type" />
         </children>
         <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -24,10 +24,10 @@
         <children>
             <ImageView>
                 <image>
-                    <Image url="@icons/baseline_schedule_black_24dp.png" />
+                    <Image url="@icons/baseline_food_bank_black_24dp.png" />
                 </image>
             </ImageView>
-            <Text fx:id="minsText" text="Mins Exercised" />
+            <Text fx:id="mealText" text="Meal Consumed" />
         </children>
         <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
