--- a/HealthTrackerApp/src/main/resources/view_foods_list.fxml
+++ b/HealthTrackerApp/src/main/resources/view_foods_list.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.text.Font?>
-<?import javafx.geometry.Point3D?>
-<?import javafx.geometry.Insets?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewFoodsListController">
     <children>
         <GridPane>
@@ -38,7 +34,7 @@
         <AnchorPane>
             <children>
                 <Label fx:id="listFoodsLabel" alignment="CENTER" contentDisplay="CENTER" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <text>All Activities</text>
+                    <text>All Meals</text>
                     <font>
                         <Font size="18.0" />
                     </font>
@@ -51,7 +47,7 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
         </AnchorPane>
-        <AnchorPane prefHeight="300.0">
+        <AnchorPane prefHeight="200.0" VBox.vgrow="ALWAYS">
             <children>
                 <ListView fx:id="foodsList" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
@@ -66,6 +62,10 @@
                 <Insets bottom="5.0" top="5.0" />
             </padding>
         </HBox>
+        <Button mnemonicParsing="false" onAction="#switchToGraphActivity" text="View Meals In Graph" textAlignment="CENTER">
+            <VBox.margin>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </VBox.margin>
+        </Button>
     </children>
 </VBox>
-
