--- a/HealthTrackerApp/src/main/resources/dashboard.fxml
+++ b/HealthTrackerApp/src/main/resources/dashboard.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.dashboardController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.dashboardController">
    <children>
       <GridPane>
         <columnConstraints>
@@ -76,7 +76,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label style="-fx-font-weight: bold;" text="X" GridPane.columnIndex="2">
+            <Label fx:id="dailyCalories" style="-fx-font-weight: bold;" text="X" GridPane.columnIndex="2">
                <font>
                   <Font size="20.0" />
                </font>
