--- a/HealthTrackerApp/src/main/resources/goals.fxml
+++ b/HealthTrackerApp/src/main/resources/goals.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.goalController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.goalController">
    <children>
       <GridPane>
         <columnConstraints>
@@ -81,6 +81,13 @@
                   <Label text="Goal objects WIP" />
                </children>
             </AnchorPane>
-         </center></BorderPane>
+         </center>
+         <right>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label text="Label" />
+               </children>
+            </VBox>
+         </right></BorderPane>
    </children>
 </VBox>
