--- a/HealthTrackerApp/src/main/resources/weightProgress.fxml
+++ b/HealthTrackerApp/src/main/resources/weightProgress.fxml
@@ -49,10 +49,10 @@
          <children>
             <LineChart fx:id="weightLineChart" animated="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <CategoryAxis label="Date" side="BOTTOM" />
               </xAxis>
               <yAxis>
-                <NumberAxis side="LEFT" />
+                <NumberAxis label="Weight (lb)" side="LEFT" />
               </yAxis>
             </LineChart>
          </children>
