--- a/HealthTrackerApp/src/main/resources/goals.fxml
+++ b/HealthTrackerApp/src/main/resources/goals.fxml
@@ -52,7 +52,7 @@
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <Label text="Current weight:" />
-                        <Label text="0kg">
+                        <Label fx:id="currentWeight" text="0kg">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
@@ -62,7 +62,7 @@
                   <HBox alignment="CENTER" layoutX="11.0" layoutY="130.0" prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <Label text="Current height:" />
-                        <Label text="0m">
+                        <Label fx:id="currentHeight" text="0m">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
@@ -75,11 +75,8 @@
          <VBox.margin>
             <Insets top="7.0" />
          </VBox.margin>
-         <center>
-            <VBox fx:id="goalsPane" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
-         </center>
          <right>
-            <VBox alignment="TOP_CENTER" prefHeight="363.0" prefWidth="135.0" spacing="10.0" style="-fx-border-width: 1; -fx-border-color: Black; -fx-border-style: dotted;" BorderPane.alignment="CENTER">
+            <VBox alignment="TOP_CENTER" prefHeight="363.0" prefWidth="193.0" spacing="10.0" style="-fx-border-width: 1; -fx-border-color: Black; -fx-border-style: dotted;" BorderPane.alignment="CENTER">
                <children>
                   <Label text="Add Goal">
                      <font>
@@ -87,21 +84,37 @@
                      </font>
                   </Label>
                   <ChoiceBox fx:id="goalTypeChoice" prefHeight="25.0" prefWidth="100.0" />
-                  <HBox alignment="CENTER" prefHeight="35.0" prefWidth="133.0">
+                  <HBox alignment="CENTER" prefHeight="35.0" prefWidth="133.0" spacing="3.0">
                      <children>
-                        <Label text="Name:  " />
-                        <TextField fx:id="nameInput" prefHeight="25.0" prefWidth="74.0" />
+                        <Label text="Name:" />
+                        <TextField fx:id="nameInput" prefHeight="25.0" prefWidth="87.0" />
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="29.0" prefWidth="133.0">
+                  <HBox alignment="CENTER" prefHeight="29.0" prefWidth="133.0" spacing="3.0">
                      <children>
-                        <Label text="Target:  " />
-                        <TextField fx:id="targetInput" prefHeight="25.0" prefWidth="34.0" />
+                        <Label text="Target:" />
+                        <TextField fx:id="targetInput" prefHeight="25.0" prefWidth="56.0" />
+                        <Label fx:id="targetSubscript" />
                      </children>
                   </HBox>
+                  <VBox fx:id="dateSelection" alignment="TOP_CENTER" prefHeight="119.0" prefWidth="191.0" spacing="10.0">
+                     <children>
+                        <Label text="Start date:" />
+                        <DatePicker fx:id="startDate" />
+                        <Label text="Pick an end date:" />
+                        <DatePicker fx:id="calendar" />
+                     </children>
+                  </VBox>
                   <Button fx:id="addButton" mnemonicParsing="false" onAction="#addGoal" text="Add" />
                </children>
             </VBox>
-         </right></BorderPane>
+         </right>
+         <center>
+            <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="TOP_CENTER">
+               <content>
+                  <VBox fx:id="goalsPane" prefHeight="218.0" prefWidth="250.0" />
+               </content>
+            </ScrollPane>
+         </center></BorderPane>
    </children>
 </VBox>
