Added reset password functionality
A user can now change their password by using the UI on the log in page.

--- a/HealthTrackerApp/src/main/resources/reset_password.fxml
+++ b/HealthTrackerApp/src/main/resources/reset_password.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.logInController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.resetPasswordController">
    <children>
       <GridPane>
         <columnConstraints>
@@ -53,7 +53,7 @@
                         <Label prefHeight="17.0" prefWidth="505.0" text="username / email:" />
                      </children>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="75.0" prefWidth="343.0">
+                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="51.0" prefWidth="343.0">
                      <children>
                         <TextField fx:id="detailsTextField" prefHeight="25.0" prefWidth="187.0" />
                      </children>
@@ -68,18 +68,24 @@
                         <PasswordField fx:id="passwordTextField" prefHeight="25.0" prefWidth="182.0" />
                      </children>
                   </HBox>
+                  <HBox layoutX="10.0" layoutY="178.0" prefHeight="35.0" prefWidth="343.0">
+                     <children>
+                        <Label prefHeight="17.0" prefWidth="507.0" text="password verification:" />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="213.0" prefHeight="37.0" prefWidth="343.0">
+                     <children>
+                        <PasswordField fx:id="passwordVerificationTextField" prefHeight="25.0" prefWidth="182.0" />
+                     </children>
+                  </HBox>
                   <HBox layoutX="10.0" layoutY="10.0" prefHeight="39.0" prefWidth="343.0">
                      <children>
                         <Label fx:id="errorField" prefHeight="46.0" prefWidth="345.0" />
                      </children>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="210.0" prefHeight="40.0" prefWidth="343.0">
+                  <HBox layoutX="10.0" layoutY="322.0" prefHeight="39.0" prefWidth="343.0">
                      <children>
-                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="186.0" text="Login" />
-                     </children></HBox>
-                  <HBox layoutX="10.0" layoutY="289.0" prefHeight="40.0" prefWidth="343.0">
-                     <children>
-                        <Button fx:id="reset_password" mnemonicParsing="false" onAction="#navigatePage" prefHeight="25.0" prefWidth="186.0" text="Reset Password" />
+                        <Button fx:id="resetPasswordButton" mnemonicParsing="false" onAction="#resetPassword" prefHeight="25.0" prefWidth="186.0" text="Reset Password" />
                      </children>
                   </HBox>
                </children></VBox>
