--- a/HealthTrackerApp/src/main/resources/successful_password_change.fxml
+++ b/HealthTrackerApp/src/main/resources/successful_password_change.fxml
@@ -3,8 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.logInController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.successfulPasswordChangeController">
    <children>
       <GridPane>
         <columnConstraints>
@@ -47,39 +48,19 @@
             </HBox>
             <VBox prefHeight="63.0" prefWidth="343.0">
                <children>
-                  <HBox prefHeight="62.0" prefWidth="343.0" />
-                  <HBox prefHeight="31.0" prefWidth="343.0">
+                  <HBox prefHeight="111.0" prefWidth="343.0" />
+                  <HBox prefHeight="96.0" prefWidth="343.0">
                      <children>
-                        <Label prefHeight="17.0" prefWidth="505.0" text="username / email:" />
+                        <Label prefHeight="101.0" prefWidth="336.0" style="-fx-font-weight: bold;" text="SUCCESSFULLY UPDATED PASSWORD" wrapText="true">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
                      </children>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="75.0" prefWidth="343.0">
+                  <HBox layoutX="10.0" layoutY="322.0" prefHeight="39.0" prefWidth="343.0">
                      <children>
-                        <TextField fx:id="detailsTextField" prefHeight="25.0" prefWidth="187.0" />
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="103.0" prefHeight="35.0" prefWidth="343.0">
-                     <children>
-                        <Label prefHeight="17.0" prefWidth="507.0" text="password:" />
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="294.0" prefHeight="37.0" prefWidth="343.0">
-                     <children>
-                        <PasswordField fx:id="passwordTextField" prefHeight="25.0" prefWidth="182.0" />
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="39.0" prefWidth="343.0">
-                     <children>
-                        <Label fx:id="errorField" prefHeight="46.0" prefWidth="345.0" />
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="210.0" prefHeight="40.0" prefWidth="343.0">
-                     <children>
-                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="186.0" text="Login" />
-                     </children></HBox>
-                  <HBox layoutX="10.0" layoutY="289.0" prefHeight="40.0" prefWidth="343.0">
-                     <children>
-                        <Button fx:id="reset_password" mnemonicParsing="false" onAction="#navigatePage" prefHeight="25.0" prefWidth="186.0" text="Reset Password" />
+                        <Button fx:id="log_in" mnemonicParsing="false" onAction="#navigatePage" prefHeight="25.0" prefWidth="247.0" text="Return to log in" />
                      </children>
                   </HBox>
                </children></VBox>
