--- a/HealthTrackerApp/src/main/resources/view_foods_list.fxml
+++ b/HealthTrackerApp/src/main/resources/view_foods_list.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewFoodsListController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewFoodsListController">
     <children>
         <GridPane>
             <columnConstraints>
@@ -21,6 +21,7 @@
                         <Button fx:id="diet" mnemonicParsing="false" onAction="#navigatePage" text="Diet &amp; Exercise" />
                         <Button fx:id="goals" mnemonicParsing="false" onAction="#navigatePage" text="Goals" />
                         <Button fx:id="groups" mnemonicParsing="false" onAction="#navigatePage" text="Groups" />
+                  <Button fx:id="Dashboard" mnemonicParsing="false" onAction="#navigatePage" text="Dashboard" />
                     </items>
                 </ToolBar>
                 <ToolBar prefHeight="40.0" prefWidth="352.0">
