--- a/HealthTrackerApp/src/main/resources/dashboard.fxml
+++ b/HealthTrackerApp/src/main/resources/dashboard.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.dashboardController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.dashboardController">
    <children>
       <GridPane>
         <columnConstraints>
@@ -27,7 +27,7 @@
             <ToolBar prefHeight="40.0" prefWidth="352.0">
               <items>
                 <Button fx:id="main_menu" mnemonicParsing="false" onAction="#navigatePage" text="Register" />
-                  <Button fx:id="log_in" mnemonicParsing="false" onAction="#navigatePage" text="Log in" />
+                  <Button fx:id="log_in" mnemonicParsing="false" onAction="#navigatePage" text="Log out" />
               </items>
             </ToolBar>
          </children>
